# aws-batch-optimization

./: main.tf
batch-core/: pyproject.toml
batch-core/.devcontainer/: Dockerfile  devcontainer.json
batch-core/batch_core/: __init__.py  config.py  job.py  job_definition.py  optimization_task.py  task_definition.py
buckets/: outputs.tf
compute_env/: main.tf  variables.tf
compute_env/spot_fleet_role/: main.tf
infra/: Makefile  main.tf  outputs.tf
infra/.devcontainer/: Dockerfile  devcontainer.json
infra/buckets/: main.tf  outputs.tf  variables.tf
infra/compute_env/: main.tf  outputs.tf  variables.tf
infra/compute_env/spot_fleet_role/: outputs.tf
infra/job_role/: main.tf  outputs.tf  variables.tf
infra/repos/: main.tf  outputs.tf
instance_role/: main.tf  outputs.tf
job_role/: main.tf
network/: main.tf  outputs.tf
