[tool.poetry]
name = "batch-core"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
aiobotocore = "^1.2.2"
dataclasses-json = "^0.5.7"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^6.2.2"
pylint = "^2.7.2"
mypy = "^0.812"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
